Fix compiling issues